--- a/sandbox.html
+++ b/sandbox.html
@@ -47,3 +47,23 @@
 </script>
 </body>
 </html>
+
+
+
+
+<section class="container section-3">
+    <div class="row">
+        <div class="col-4">
+            <img src="img/yosemite.jpeg" alt="Yosemite">
+            <button>switch</button>
+        </div>
+        <div class="col-4">
+            <img src="img/yellowstone.jpeg" alt="Yellowstone">
+            <button>switch</button>
+        </div>
+        <div class="col-4">
+            <img src="img/glacier.jpeg" alt="Glacier">
+            <button>switch</button>
+        </div>
+    </div>
+</section>
