--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -77,21 +77,21 @@
       <div class="column">
         <button class="highlight-btn">Make Last Fact Yellow</button>
         <h3>Yosemite National Park</h3>
-        <ul>
+        <ul class="facts">
           <li>Yosemite might be our nation’s 3rd national park, but it sparked the idea of national parks.</li>
           <li>Yosemite’s granite rock formations glow like fire at sunset.</li>
           <li>The park’s diverse landscape supports more than 400 species.</li>
           <li>Yosemite is home to one of the tallest waterfalls in the world.</li>
         </ul>
         <h3>Yellowstone National Park</h3>
-        <ul>
+        <ul class="facts">
           <li>Half the world’s hydrothermal features are found at Yellowstone. </li>
           <li>Old Faithful isn’t as reliable as its name.</li>
           <li>“Share the road” takes on a whole new meaning at Yellowstone.</li>
           <li>Yellowstone’s history dates back 11,000 years.</li>
         </ul>
         <h3>Glacier National Park</h3>
-        <ul>
+        <ul class="facts">
           <li>Glacier National Park is a part of the world’s first international peace park.</li>
           <li>Glacier straddles the Continental Divide, allowing for extreme weather.</li>
           <li>Going-to-the-Sun Road is a spectacular marvel and a must see on your trip to Glacier.</li>
@@ -103,14 +103,14 @@
   <section class="container section-3">
     <div class="row">
       <div class="big-box">
-        <div class="box">
-          <div id ="left"></div>
+        <div class="yosemite">
+          <img src="img/yosemite.jpeg" alt="Yosemite">
         </div>
-        <div class="box">
-          <div id ="center"></div>
+        <div class="yellowstone">
+          <img src="img/yellowstone.jpeg" alt="Yellowstone">
         </div>
-        <div class="box">
-          <div id ="right"></div>
+        <div class="glacier">
+          <img src="img/glacier.jpeg" alt="Glacier">
         </div>
       </div>
       <div class="big-box">
