--- a/ajax-store.html
+++ b/ajax-store.html
@@ -1,37 +1,104 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
+    <!--  Required Meta Tags -->
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
+
     <title>Online Store</title>
+
+    <!--  Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/0bb8b86cc6.js" crossorigin="anonymous"></script>
+
+    <!--  Google Fonts-->
+
+    <!--  Custom CSS Styles -->
+    <link rel="stylesheet" href="css/ajax-store-style.css">
+
 </head>
-<body>
+<body id="custom">
 
-<h1>My Tool Store</h1>
+<!-- Start Navigation Bar-->
 
-<table id="products">
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>Categories</th>
-        </tr>
-    </thead>
-    <tbody id="insertProducts"></tbody>
-</table>
+<section id="navbar">
+    <nav class="navbar navbar-light navbar-expand-lg">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#supportedContent"
+                    aria-controls="#supportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+            <div class="collapse navbar-collapse" tabindex="-1" id="supportedContent"
+                 aria-labelledby="supportedContent">
+                <div class="collapse-body">
 
-<script>
-(function() {
-    "use strict";
-    // TODO: Create an AJAX GET request for the file under data/inventory.json
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="navbar-brand d-block" href="#">Tool-Time</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link 1" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link 2" href="#">Order Form</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link 3" href="#">Rentals</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+</section>
 
-    // TODO: Take the data from inventory.json and append it to the products table
-    //       HINT: Your data should come back as a JSON object; use console.log() to inspect
-    //             its contents and fields
-    //       HINT: You will want to target #insertProducts for your new HTML elements
-})();
-</script>
+<div class="container">
+    <!--Start jumbotron-->
+    <!--  NEED TO GET THE IMAGE TO DISAPPEAR ON SMALL SCREENS d-sm-none d-md-block -->
+    <div class="jumbotron d-md-flex d-none d-md-block align-items-md-center">
+        <div class="opacity-75 bg-light flex-fill text-center display-4">It's Tool Time</div>
+    </div>
+</div>
+<!--End jumbotron-->
+
+
+<section class="container tools">
+    <div class="row">
+        <table id="products">
+            <thead>
+            <tr>
+                <th>Title</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>Categories</th>
+            </tr>
+            </thead>
+            <tbody id="insertProducts"></tbody>
+        </table>
+    </div>
+</section>
+
+
+<button class="btn btn-dark btn-lg" type="button" id="refresh">Refresh</button>
+
+
+
+
+
+<!--jQuery Source Code-->
+<script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+
+<!--Bootstrap JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+<!-- Your custom JS goes here -->
+<script src="js/ajax-store.js"></script>
+
+
 
 </body>
 </html>
