--- a/practice.html
+++ b/practice.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
 
-    <title>Online Store</title>
+    <title>Practice Document</title>
 
     <!--  Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -17,10 +17,19 @@
     <!--  Google Fonts-->
 
     <!--  Custom CSS Styles -->
-    <link rel="stylesheet" href="css/ajax-store-style.css">
+    <link rel="stylesheet" href="css/practice.css">
 
 </head>
 <body>
+<!--Start Container-->
+<h1>AJAX REQUEST PRACTICE</h1>
+<section class="container">
+    <div class="row">
+        <div class="column">
+            <button id="button">Get Text File</button>
+        </div>
+    </div>
+</section>
 
 
 
@@ -32,7 +41,35 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <!-- Your custom JS goes here -->
-<script src="js/ajax-store.js"></script>
+<script src="js/practice.js"></script>
+
+
+<script>
+
+//document.getElementById('button').addEventListener('click', loadText);
+//function loadText(){
+//   console.log('button clicked');
+//
+//   var xhr = new XMLHttpRequest();
+//
+//}
+
+$.get('https://pokeapi.co/api/v2/pokemon/charmander').done(function(data) {
+    console.log("Request status: " + status);
+    console.log("Data returned from server:");
+    console.log(data);
+
+});
+
+
+</script>
+
+
+<!--End Container-->
+
+
+
+
 
 
 
