--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
 
-    <title>Online Store</title>
+    <title>My Blog</title>
 
     <!--  Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -17,12 +17,49 @@
     <!--  Google Fonts-->
 
     <!--  Custom CSS Styles -->
-    <link rel="stylesheet" href="css/ajax-store-style.css">
+    <!--    <link rel="stylesheet" href="css/ajax-store-style.css">-->
+
+    <style>
+        .jumbotron {
+            /*background-image: url('img/blog.jpeg');*/
+            background-repeat: no-repeat;
+            background-size: 100%;
+            overflow:hidden;
+
+        }
+        .jumboText {
+            background-image: linear-gradient(90deg, blue, blueviolet, lightblue);
+            color:black;
+        }
+        .cardText {
+            text-indent: 2em;
+        }
+        .card {
+            margin: 20px;
+            padding: 5px;
+        }
+
+        body {
+            background-image: linear-gradient(230deg, lightblue, lightcyan, darkcyan);
+        }
+        .blockquote-footer {
+            color:white;
+        }
+    </style>
 
 </head>
 <body>
 
+<div class="jumbotron text-center">
+    <h1 class="display-4 jumboText">My Blog</h1>
+    <p class="lead jumboText" id="quote">Welcome to my blog! There are secrets inside the paragraphs.</p>
+    <hr class="my-4">
+</div>
 
+
+<div class="mx-4" id="post"></div>
+
+<button class="btn btn-primary btn-lg" type="button" id="refresh">Refresh</button>
 
 
 <!--jQuery Source Code-->
@@ -32,8 +69,52 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <!-- Your custom JS goes here -->
-<script src="js/ajax-store.js"></script>
+<!--<script src="js/ajax-store.js"></script>-->
 
+<script>
+    // function randomCard() {
+    //
+    //     var options = ["<div class='card text-white bg-primary mb-4'>","<div class='card text-white bg-success mb-4'>","<div class='card text-white bg-danger mb-4'>","<div class='card text-white bg-warning mb-4'>"];
+    //     var randomNumTest = Math.floor(Math.random() * options.length-1) + 1;
+    //     return options[randomNumTest];
+    // }
+
+    var randomCard = "<div class='card mb-4'>"
+
+    function loadData() {
+
+        $.ajax("data/blog.json").done(function (data, status, jqXhr) {
+            console.log(data);
+            // alert("Test load worked");
+
+            var blogData;
+
+            $("#post").html("");
+
+            data.forEach((info) => {
+
+                blogData = randomCard + `<h4 class='card-header'>${info.title}</h4>  <p>${info.content}</p> <p>${info.categories.join(", ")}</p> <p>${info.date}</p>`
+
+                $("#post").append(blogData);
+            });
+
+
+            //     // console.log(data);
+            //     // console.log(status);
+            //     // console.log(jqXhr);
+            // }).fail(function (jqXhr, status, error) {
+            //     alert("Test load failed");
+            //     console.log(jqXhr);
+            //     console.log(status);
+            //     console.log(error);
+            // }).always(function () {
+            //     // alert("This will always happen");
+        });
+    }
+    $("#refresh").click(function() {
+        loadData();
+    });
+</script>
 
 
 </body>
