--- a/ajax-store.html
+++ b/ajax-store.html
@@ -17,44 +17,34 @@
     <!--  Google Fonts-->
 
     <!--  Custom CSS Styles -->
-    <link rel="stylesheet" href="css/ajax-store-style.css">
+
+    <style>
+
+        button {
+            background-color: white;
+            border-radius: 20px;
+            margin: 1em;
+            padding: 1em;
+        }
+
+        td, tr{
+            text-align: center;
+            margin: 20px;
+            border: black solid;
+        }
+
+        .jumbotron {
+            background-image: url("/img/tools.jpeg");
+            height: 346px;
+            background-size: cover;
+            margin-top: 2em;
+            margin-bottom: 2em;
+        }
+
+    </style>
 
 </head>
 <body id="custom">
-
-<!-- Start Navigation Bar-->
-
-<section id="navbar">
-    <nav class="navbar navbar-light navbar-expand-lg">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#supportedContent"
-                    aria-controls="#supportedContent">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" tabindex="-1" id="supportedContent"
-                 aria-labelledby="supportedContent">
-                <div class="collapse-body">
-
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="navbar-brand d-block" href="#">Tool-Time</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link 1" href="#">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link 2" href="#">Order Form</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link 3" href="#">Rentals</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </nav>
-</section>
 
 <div class="container">
     <!--Start jumbotron-->
@@ -64,7 +54,6 @@
     </div>
 </div>
 <!--End jumbotron-->
-
 
 <section class="container tools">
     <div class="row">
@@ -86,9 +75,6 @@
 <button class="btn btn-dark btn-lg" type="button" id="refresh">Refresh</button>
 
 
-
-
-
 <!--jQuery Source Code-->
 <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
 
@@ -96,9 +82,43 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <!-- Your custom JS goes here -->
-<script src="js/ajax-store.js"></script>
+
+<!--Inline JS-->
+<script>
+        "use strict";
+        // TODO: Create an AJAX GET request for the file under data/inventory.json
+        // Tool info api request
+        function loadData() {
+            $.ajax("data/inventory.json").done(function (data) {
+                console.log(data);
+
+        // TODO: Take the data from inventory.json and append it to the products table
+        //       HINT: Your data should come back as a JSON object; use console.log() to inspect
+        //             its contents and fields
 
 
+        var inventoryData;
+
+            $("#insertProducts").html("");
+
+                data.forEach((inventory) => {
+
+                    inventoryData =
+                        `<tr><td> ${inventory.title} </td><td> ${inventory.quantity} </td><td> $${inventory.price} </td><td> ${inventory.categories} </td></tr>`
+
+                    $("#insertProducts").append(inventoryData);
+                });
+            })
+        }
+
+        $("#refresh").click(function() {
+            loadData();
+        });
+
+
+    //       HINT: You will want to target #insertProducts for your new HTML elements
+
+</script>
 
 </body>
 </html>
