--- a/practice.html
+++ b/practice.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
 
-    <title>Practice Document</title>
+    <title>My Blog</title>
 
     <!--  Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -17,21 +17,49 @@
     <!--  Google Fonts-->
 
     <!--  Custom CSS Styles -->
-    <link rel="stylesheet" href="css/practice.css">
+    <!--    <link rel="stylesheet" href="css/ajax-store-style.css">-->
+
+    <style>
+        .jumbotron {
+            /*background-image: url('img/blog.jpeg');*/
+            background-repeat: no-repeat;
+            background-size: 100%;
+            overflow:hidden;
+
+        }
+        .jumboText {
+            background-image: linear-gradient(90deg, blue, blueviolet, lightblue);
+            color:black;
+        }
+        .cardText {
+            text-indent: 2em;
+        }
+        .card {
+            margin: 20px;
+            padding: 5px;
+        }
+
+        body {
+            background-image: linear-gradient(230deg, lightblue, lightcyan, darkcyan);
+        }
+        .blockquote-footer {
+            color:white;
+        }
+    </style>
 
 </head>
 <body>
-<!--Start Container-->
-<h1>AJAX REQUEST PRACTICE</h1>
-<section class="container">
-    <div class="row">
-        <div class="column">
-            <button id="button">Get Text File</button>
-        </div>
-    </div>
-</section>
+
+<div class="jumbotron text-center">
+    <h1 class="display-4 jumboText">My Blog</h1>
+    <p class="lead jumboText" id="quote">Welcome to my blog! There are secrets inside the paragraphs.</p>
+    <hr class="my-4">
+</div>
 
 
+<div class="mx-4" id="post"></div>
+
+<button class="btn btn-primary btn-lg" type="button" id="refresh">Refresh</button>
 
 
 <!--jQuery Source Code-->
@@ -41,36 +69,37 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <!-- Your custom JS goes here -->
-<script src="js/practice.js"></script>
-
+<!--<script src="js/ajax-store.js"></script>-->
 
 <script>
+    (function () {
+        $.get('data/blog.json').done((data) => {
 
-//document.getElementById('button').addEventListener('click', loadText);
-//function loadText(){
-//   console.log('button clicked');
-//
-//   var xhr = new XMLHttpRequest();
-//
-//}
+            console.log(data)
 
-$.get('https://pokeapi.co/api/v2/pokemon/charmander').done(function(data) {
-    console.log("Request status: " + status);
-    console.log("Data returned from server:");
-    console.log(data);
+            let markup = ''
+            data.forEach((el) => {
+                markup += `
+            <div class="card text-center mb-4">
+              <div class="card-header">
+                Categories: ${el.categories}
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">${el.title}</h5>
+                <p class="card-text">${el.content}</p>
 
-});
+              </div>
+              <div class="card-footer text-muted">
+                ${el.date}
+              </div>
+            </div>`
+            })
+            $('#posts').html(`${markup}`)
+        })
+    })()
 
 
 </script>
-
-
-<!--End Container-->
-
-
-
-
-
 
 
 </body>
