--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -2,9 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Mapbox Exercise</title>
+
+
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css' rel='stylesheet' />
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/mapbox-maps-api.css">
 </head>
 <body>
+
+<h1>My First Mapbox Map!</h1>
+
+<!-- The HTML element that serves as the Mapbox container -->
+
+<div class="page-wrapper">
+    <div class="container grow">
+        <div class="row grow">
+            <div class="column align-center justify-center">
+                <div id="map" style='width: 800px; height: 600px;'></div>
+                <script>
+                    mapboxgl.accessToken =
+                        'pk.eyJ1IjoicmF5Z2xhc3MiLCJhIjoiY2xndmtzYmhqMDJxZTNjbXU1cGk3enlpeCJ9.CvCiURzPD2T4YeSY9PEGug';
+
+                    const map = new mapboxgl.Map({
+                        container: 'map', // container ID
+                        style: 'mapbox://styles/mapbox/outdoors-v12', // style URL
+                        center: [-94.6708, 38.9822], // starting position [lng, lat]
+                        zoom: 9, // starting zoom
+                    });
+                </script>
+                <div class="row align-center btn-row">
+                    <button id="resetMap">Reset Map</button>
+                    <button id="goToFavPlace">Press for my Favorite Places to Eat</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Custom JS -->
+
+<script src="js/mapbox-geocoder-utils.js"></script>
+<script src="js/mapbox-maps-api.js"></script>
 
 </body>
 </html>
