--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -8,46 +8,63 @@
 
     <title>Mapbox Exercise</title>
 
+    <!--  Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/0bb8b86cc6.js" crossorigin="anonymous"></script>
+
+    <!--  Google Fonts-->
+
+    <!-- Mapbox Dependencies -->
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css' rel='stylesheet' />
+    <script src="js/mapbox-geocoder-utils.js"></script>
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/mapbox-maps-api.css">
+
 </head>
 <body>
 
-<h1>My First Mapbox Map!</h1>
+<!--Start Content-->
+
+<div class = "header">
+    <h1>My First Mapbox Map!</h1>
+</div>
+
 
 <!-- The HTML element that serves as the Mapbox container -->
-
-<div class="page-wrapper">
-    <div class="container grow">
-        <div class="row grow">
-            <div class="column align-center justify-center">
-                <div id="map" style='width: 800px; height: 600px;'></div>
-                <script>
-                    mapboxgl.accessToken =
-                        'pk.eyJ1IjoicmF5Z2xhc3MiLCJhIjoiY2xndmtzYmhqMDJxZTNjbXU1cGk3enlpeCJ9.CvCiURzPD2T4YeSY9PEGug';
-
-                    const map = new mapboxgl.Map({
-                        container: 'map', // container ID
-                        style: 'mapbox://styles/mapbox/outdoors-v12', // style URL
-                        center: [-94.6708, 38.9822], // starting position [lng, lat]
-                        zoom: 9, // starting zoom
-                    });
-                </script>
-                <div class="row align-center btn-row">
-                    <button id="resetMap">Reset Map</button>
-                    <button id="goToFavPlace">Press for my Favorite Places to Eat</button>
-                </div>
-            </div>
+<div class = container>
+    <div class = row>
+        <div class = column>
+            <div id="map"></div>
         </div>
     </div>
 </div>
 
-<!-- Custom JS -->
+<!-- The HTML element that serves as the Button container -->
+<div class = container>
+    <div class = row>
+        <div class = column-3>
+            <button id="favPlace">Favorite Places</button>
+            <button id="resetMap">Reset Map</button>
+        </div>
+    </div>
+</div>
+</div>
 
+
+
+<!--End Content-->
+
+<!--jQuery Source Code-->
+<script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+
+<!--Bootstrap JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+<!-- Custom JS -->
 <script src="js/mapbox-geocoder-utils.js"></script>
 <script src="js/mapbox-maps-api.js"></script>
 
