--- a/working.html
+++ b/working.html
@@ -40,7 +40,7 @@
             color: white;
         }
         .background{
-            background-image: url("img/forecast.jpeg");
+            background-image: url("img/KansasCity.jpeg");
             background-repeat: no-repeat;
             width: 100%;
             height: 100%;
@@ -139,39 +139,17 @@
 <!--JAVASCRIPT HERE-->
 <script>
 
+    //
 
-
-    //MAPBOX_TOKEN is specified in the keys.js file which is equal to my token
-    // define variables for the map and marker
-    let map;
-    let marker = new mapboxgl.Marker();
-
-    // initialize the map
-
-    mapboxgl.accessToken = MAPBOX_KEY;
-    map = new mapboxgl.Map({
-        container: 'map',
-        style: 'mapbox://styles/mapbox/navigation-night-v1',
-        zoom: 10,
-        center: [-96.80343,  32.77821]
-    });
-
-
-
-
-    // when page loads auto set marker to my home location
-    map.on("load", function (){
-        marker.setLngLat([-96.80343,  32.77821]).addTo(map)
-    });
-
-    // when page loads auto shows the forecast for 5 days at the location
     $.get("https://api.openweathermap.org/data/2.5/forecast", {
         APPID: OPEN_WEATHER_APPID,
-        q:     "Haslet, US",
+        q:     "Overland Park, US",
         units: "imperial"
     }).done(function(data) {
         // clear the previous weather data
         $("#weather").empty();
+
+        console.log(data);
 
         // loop over the forecast data and create a card for each day
         for (let i = 0; i < 40; i += 8) {
@@ -187,112 +165,11 @@
         }
     });
 
-
-
-    // handle the map click event for when click on another location it updates
-    map.on('click', function(click) {
-        // set the marker position to the clicked location
-        marker.setLngLat(click.lngLat).addTo(map);
-
-        // get the weather data for the clicked location
-        $.get("https://api.openweathermap.org/data/2.5/forecast", {
-            APPID: OPEN_WEATHER_APPID,
-            lat: click.lngLat.lat,
-            lon: click.lngLat.lng,
-            units: "imperial"
-        }).done(function(data) {
-            // clear the previous weather data
-            $("#weather").empty();
-
-            // loop over the forecast data and create a card for each day
-            for (let i = 0; i < 40; i += 8) {
-                $('#weather').append("<div class='weatherCards'><p class='date'>" + data.list[i].dt_txt.substring(0, 10) + "</p>" +
-                    "<p>" + data.list[i].main.temp_min + " °F" + " / " + data.list[i].main.temp_max + " °F" + "</p>" +
-                    "<img src='http://openweathermap.org/img/w/" + data.list[i].weather[0].icon + ".png'>" +
-                    "<hr class='HR'>" +
-                    "<p>Description: " + data.list[i].weather[0].description + "</p>" +
-                    "<p>Humidity: " + data.list[i].main.humidity + "%" + "<hr class='HR'>" +
-                    "<p>Wind: " + data.list[i].wind.speed +  " mph" + "<hr class='HR'>" + "</p>" +
-                    "<p>Pressure: " + data.list[i].main.pressure + " Hg" + "</p>")
-            }
-        });
-    });
-
-    // function to have the geocoder update the map when searched location
-    document.getElementById("search-btn").addEventListener("click", geocoder);
-    function geocoder() {
-        let location = document.getElementById('search-box').value;
-
-        // use the Mapbox Geocoding API to get the latitude and longitude of the location
-        $.get("https://api.mapbox.com/geocoding/v5/mapbox.places/" + location + ".json", {
-            access_token: MAPBOX_TOKEN
-        }).done(function(data) {
-            // get the latitude and longitude from the response
-            let lng = data.features[0].center[0];
-            let lat = data.features[0].center[1];
-
-            // set the map center and marker location to the latitude and longitude
-            map.setCenter([lng, lat]);
-            marker.setLngLat([lng, lat]);
-
-
-        });
-    }
-    $("#search-btn").click(function () {
-        alert("Lets see whats happening in your neck of the woods!")
-        let searchQuery = $("#search-box").val();
-        if (searchQuery.length > 0) {
-            // use the mapbox to get the coordinates of the location
-            $.get("https://api.mapbox.com/geocoding/v5/mapbox.places/" + searchQuery + ".json", {
-                access_token: MAPBOX_TOKEN,
-                type: "place",
-                limit: 1
-            }).done(function (data) {
-                // get the coordinates of the location from the Mapbox Geocoding API response
-                let longitude = data.features[0].center[0];
-                let latitude = data.features[0].center[1];
-
-                // set the map center and marker location to the new location
-                map.setCenter([longitude, latitude]);
-                marker.setLngLat([longitude, latitude]).addTo(map);
-
-
-
-
-
-
-
-                // use the OpenWeather API to get the forecast for the new location
-                $.get("https://api.openweathermap.org/data/2.5/forecast", {
-                    APPID: OPEN_WEATHER_APPID,
-                    lat: latitude,
-                    lon: longitude,
-                    units: "imperial"
-                }).done(function (data) {
-                    // clear the previous weather data
-                    $("#weather").empty();
-
-                    // loop over the forecast data and create a card for each day
-                    for (let i = 0; i < 40; i += 8) {
-                        $('#weather').append("<div class='weatherCards'><p class='date'>" + data.list[i].dt_txt.substring(0, 10) + "</p>" +
-                            "<p>" + data.list[i].main.temp_min + " °F" + " / " + data.list[i].main.temp_max + " °F" + "</p>" +
-                            "<img src='http://openweathermap.org/img/w/" + data.list[i].weather[0].icon + ".png'>" +
-                            "<hr class='HR'>" +
-                            "<p>Description: " + data.list[i].weather[0].description + "</p>" +
-                            "<p>Humidity: " + data.list[i].main.humidity + "%" + "<hr class='HR'>" +
-                            "<p>Wind: " + data.list[i].wind.speed +  " mph" + "<hr class='HR'>" + "</p>" +
-                            "<p>Pressure: " + data.list[i].main.pressure + " Hg" + "</p>")
-                    }
-
-                });
-
-            });
-        }
-    });
-
-
 </script>
+
 <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
