--- a/working.html
+++ b/working.html
@@ -5,98 +5,26 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Weather Map EXERCISE</title>
+
     <!-- Mapbox JS (got both of these from https://docs.mapbox.com/mapbox-gl-js/guides/install/#quickstart)-->
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.js'></script>
+
     <!-- Mapbox CSS -->
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css' rel='stylesheet' />
 
-    <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-    <!--  Bootstrap  -->
+    <!--  Bootstrap CSS  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/0bb8b86cc6.js" crossorigin="anonymous"></script>
 
-    <style>
-        .location{
-            display: flex;
-            justify-content: center;
-            color: white;
-        }
-        .geocoder{
-            display: flex;
-            justify-content: center;
-            width: 100%;
-        }
-        #search-btn{
-            border-radius: 10px;
-            background: black;
-            color: white;
-            margin-left: 10px;
-        }
-        #search-box{
-            width: 50%;
-            height: 40px;
-            background: black;
-            color: white;
-        }
-        .background{
-            background-image: url("img/KansasCity.jpeg");
-            background-repeat: no-repeat;
-            width: 100%;
-            height: 100%;
-        }
-        .date{
-            display: flex;
-            justify-content: center;
-            background: lightgray;
-            color: black;
-            width: 100%;
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
+    <!--  Google Fonts-->
 
-        }
-        .geocoder{
-            padding-left: 10px;
-        }
-        .navbar{
-            display: flex;
-            padding-left: 10px;
-            padding-right: 10px;
-        }
-        .HR{
-            background-color: black;
-            height: 2px;
-            width: 95%;
-            padding: 0;
-            margin: 0;
-        }
+    <!--  Custom CSS Styles -->
+    <link rel="stylesheet" href="css/sandbox.css">
 
-        #map {
-            display: flex;
-            /* the width and height may be set to any size */
-            width: 100%;
-            height: 700px;
-        }
-
-        #weather{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
-
-
-        }
-        .weatherCards{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            border: black solid 2px;
-            border-radius: 10px;
-            width: 220px;
-            color: lightgray;
-            background-color: rgba(100, 100, 100, 0.5); /* set a semi-transparent white background */
-            backdrop-filter: blur(3px); /* apply a blur filter to create the frosted effect */
-        }
-    </style>
 
 </head>
 <body>
@@ -105,71 +33,20 @@
 
 <!--PAGE DISPLAY HERE-->
 
-<!--NAVBAR HERE-->
-<nav class="navbar" style="background-color: whitesmoke;">
-    <h3 style="color: black">Weather App</h3>
-    <p class="current-city" style="color: black"> <span id="current-location"></span></p>
-</nav>
-<div class="background">
-    <br>
-
-    <!--SEARCH BAR/BUTTON HERE-->
-    <div id="geocoder" class="geocoder">
-        <label for="search-box"></label>
-        <input type="text" placeholder="Enter a location" id="search-box">
-        <button id="search-btn" type="submit">Search</button>
-    </div>
-
-    <br>
-
-    <h3 class="location" id="location-head"></h3>
-
-    <!--WEATHER CARDS HERE-->
-    <div id="weather"></div>
-
-    <br>
-</div>
-<!--MAP HERE-->
-<div id='map'></div>
-<script src="js/keys.js"></script>
-<script src="js/mapbox-geocoder-utils.js"></script>
-
-
 
 <!--JAVASCRIPT HERE-->
 <script>
 
-    //
-
-    $.get("https://api.openweathermap.org/data/2.5/forecast", {
-        APPID: OPEN_WEATHER_APPID,
-        q:     "Overland Park, US",
-        units: "imperial"
-    }).done(function(data) {
-        // clear the previous weather data
-        $("#weather").empty();
-
-        console.log(data);
-
-        // loop over the forecast data and create a card for each day
-        for (let i = 0; i < 40; i += 8) {
-            console.log(data.list[i])
-            $('#weather').append("<div class='weatherCards'><p class='date'>" + data.list[i].dt_txt.substring(0, 10) + "</p>" +
-                "<p>" + data.list[i].main.temp_min + " °F" + " / " + data.list[i].main.temp_max + " °F" + "</p>" +
-                "<img src='http://openweathermap.org/img/w/" + data.list[i].weather[0].icon + ".png'>" +
-                "<hr class='HR'>" +
-                "<p>Description: " + data.list[i].weather[0].description + "</p>" +
-                "<p>Humidity: " + data.list[i].main.humidity + "%" + "<hr class='HR'>" +
-                "<p>Wind: " + data.list[i].wind.speed +  " mph" + "<hr class='HR'>" + "</p>" +
-                "<p>Pressure: " + data.list[i].main.pressure + " Hg" + "</p>")
-        }
-    });
-
 </script>
 
+<!-- JQuery -->
 <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
 
-
+<!--Bootstrap JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+<!-- Your custom JS goes here -->
+<script src="js/sandbox.js"></script>
+
 </body>
 </html>
