--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -17,7 +17,7 @@
     <!--  Google Fonts-->
 
     <!--  Custom CSS Styles -->
-    <!--    <link rel="stylesheet" href="css/ajax-store-style.css">-->
+    <!--    <link rel="stylesheet" href="css/ajax-store-main.css">-->
 
     <style>
         .jumbotron {
