--- a/Custom Weather Application - JS/index.html
+++ b/Custom Weather Application - JS/index.html
@@ -31,12 +31,18 @@
 <body>
 <!--WEATHER CARDS HERE-->
 
-<div class="wrapper">
-    <div class="cards_wrap">
-        <div class="cardItem" id="weather"></div>
-
-    </div>
-</div>
+<section id="wrapper">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <div class="card_area">
+                    <!--CONTENT FOR CARDS FROM JS-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</section>
 
 
 
