--- a/Custom Weather Application - JS/index.html
+++ b/Custom Weather Application - JS/index.html
@@ -35,16 +35,22 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col">
-                <div class="card_area">
+                <div class="card_area flex-md-row" >
                     <!--CONTENT FOR CARDS FROM JS-->
                     </div>
                 </div>
             </div>
         </div>
     </section>
-</section>
 
 
+<!--<div class="row">-->
+<!--    <div class="col-sm-4">-->
+<!--        <div class="card_area">-->
+
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 
 
