--- a/WeatherMapProject/weather_map.html
+++ b/WeatherMapProject/weather_map.html
@@ -87,9 +87,20 @@
   <br>
 
   <!--WEATHER CARDS HERE-->
-  <div id="weather"></div>
 
-  <br>
+  <section id="wrapper">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col">
+          <div class="card_area flex-md-row" >
+            <!--CONTENT FOR CARDS FROM JS-->
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 </div>
 
 <hr>
