--- a/WeatherMapProject/weather_map.html
+++ b/WeatherMapProject/weather_map.html
@@ -52,7 +52,7 @@
            aria-labelledby="supportedContent">
         <div class="collapse-body">
 
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul id ="nav-link-color" class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="navbar-brand d-block" href="#">Weather Application</a>
             </li>
