--- a/practice.html
+++ b/practice.html
@@ -24,7 +24,7 @@
 <!--    <script src="../js/keys.js"></script>-->
 
     <!-- Custom CSS -->
-<!--    <link rel="stylesheet" href="weather-map.css">-->
+    <link rel="stylesheet" href="css/practice.css">
 
     <!--jQuery Source Code-->
     <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
@@ -35,13 +35,10 @@
 
 <!--Start Content-->
 
-<div class="row">
-    <div class="col-sm-4">
-        <div class="card">
 
-        </div>
-    </div>
-</div>
+
+
+
 
 <!--End Content-->
 
@@ -53,7 +50,7 @@
 
 <!-- Custom JS -->
 <!--<script src="mapbox-geocoder-utils.js"></script>-->
-<!--<script src="weather-map.js"></script>-->
+<script src="js/practice.js"></script>
 
 </body>
 </html>
